:gear: add db config for development

--- a/beagile_api/config/database.yml
+++ b/beagile_api/config/database.yml
@@ -23,6 +23,8 @@ default: &default
 
 development:
   <<: *default
+  host: localhost
+  username: postgres
   database: beagile_api_development
 
   # The specified database role being used to connect to postgres.
