--- a/beagile_api/Gemfile
+++ b/beagile_api/Gemfile
@@ -5,6 +5,15 @@ ruby '2.6.2'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.3'
+
+# api
+gem 'grape'
+gem 'active_model_serializers'
+gem 'grape-active_model_serializers'
+gem 'grape-swagger'
+gem 'grape-swagger-rails'
+gem 'grape-swagger-active_model_serializers'
+
 # Use postgresql as the database for Active Record
 gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
