:gear: install pry

--- a/beagile_api/Gemfile
+++ b/beagile_api/Gemfile
@@ -45,6 +45,11 @@ group :development do
   gem 'grape-swagger'
   gem 'grape-swagger-rails'
   gem 'grape-swagger-active_model_serializers'
+
+  gem 'pry'
+  gem 'pry-rails'
+  gem 'pry-byebug'
+  gem 'pry-doc'
 end
 
 
