--- a/beagile_api/.rubocop.yml
+++ b/beagile_api/.rubocop.yml
@@ -10,6 +10,7 @@ AsciiComments:
 Documentation:
   Enabled: false
 Metrics/LineLength:
+  Max: 100
   IgnoredPatterns: ['^class.*']
 Layout/ClassStructure:
   Enabled: true
