:sparkles: install rubocop-performance

--- a/beagile_api/.rubocop.yml
+++ b/beagile_api/.rubocop.yml
@@ -1,3 +1,6 @@
+require:
+  - rubocop-performance
+
 # https://github.com/rubocop-hq/rubocop/blob/master/config/default.yml
 AllCops:
   TargetRubyVersion: 2.6
