--- a/beagile_api/.rubocop.yml
+++ b/beagile_api/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
   DisplayCopNames: true
   Exclude:
     - 'db/schema.rb'
+    - 'vendor/**/*'
 AsciiComments:
   Enabled: false
 Documentation:
