--- a/beagile_api/Gemfile
+++ b/beagile_api/Gemfile
@@ -7,8 +7,8 @@ ruby '2.6.2'
 gem 'rails', '~> 5.2.3'
 
 # api
-gem 'grape'
 gem 'active_model_serializers'
+gem 'grape'
 gem 'grape-active_model_serializers'
 
 # Use postgresql as the database for Active Record
@@ -33,7 +33,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
-  gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'byebug', platforms: %i[mri mingw x64_mingw]
 
   gem 'rspec-rails'
 end
@@ -45,13 +45,13 @@ group :development do
   gem 'spring-watcher-listen', '~> 2.0.0'
 
   gem 'grape-swagger'
-  gem 'grape-swagger-rails'
   gem 'grape-swagger-active_model_serializers'
+  gem 'grape-swagger-rails'
 
   gem 'pry'
-  gem 'pry-rails'
   gem 'pry-byebug'
   gem 'pry-doc'
+  gem 'pry-rails'
 
   gem 'awesome_print'
 
@@ -59,6 +59,5 @@ group :development do
   gem 'rubocop-performance'
 end
 
-
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem 'tzinfo-data', platforms: %i[mingw mswin x64_mingw jruby]
