:gear: ignore LineLength when it is comment line

--- a/beagile_api/.rubocop.yml
+++ b/beagile_api/.rubocop.yml
@@ -16,7 +16,9 @@ Documentation:
   Enabled: false
 Metrics/LineLength:
   Max: 100
-  IgnoredPatterns: ['^class.*']
+  IgnoredPatterns:
+    - '^class.*'
+    - '(\A|\s)#'
 Layout/ClassStructure:
   Enabled: true
   Categories:
