--- a/beagile_api/Gemfile
+++ b/beagile_api/Gemfile
@@ -10,6 +10,7 @@ gem 'rails', '~> 5.2.3'
 gem 'active_model_serializers'
 gem 'grape'
 gem 'grape-active_model_serializers'
+gem 'jwt'
 
 # Use postgresql as the database for Active Record
 gem 'pg', '>= 0.18', '< 2.0'
