--- a/beagile_api/Gemfile
+++ b/beagile_api/Gemfile
@@ -61,6 +61,13 @@ group :development do
 
   gem 'rubocop'
   gem 'rubocop-performance'
+
+  # deploy
+  gem 'capistrano', require: false
+  gem 'capistrano-rails', require: false
+  gem 'capistrano-rbenv', require: false
+  gem 'capistrano-bundler', require: false
+  gem 'capistrano3-puma', require: false
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
