--- a/beagile_api/Gemfile
+++ b/beagile_api/Gemfile
@@ -68,6 +68,9 @@ group :development do
   gem 'capistrano-rails', require: false
   gem 'capistrano-rbenv', require: false
   gem 'capistrano3-puma', require: false
+  # net-ssh requires the following gems
+  gem 'bcrypt_pbkdf', require: false
+  gem 'ed25519', require: false
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
