--- a/beagile_api/config/database.yml
+++ b/beagile_api/config/database.yml
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: beagile_api_production
-  username: beagile_api
-  password: <%= ENV['BEAGILE_API_DATABASE_PASSWORD'] %>
+  database: <%= Rails.application.credentials[:db][:database] %>
+  username: <%= Rails.application.credentials[:db][:username] %>
+  password: <%= Rails.application.credentials[:db][:password] %>
