--- a/beagile_api/config/database.yml
+++ b/beagile_api/config/database.yml
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: <%= Rails.application.credentials[:db][:database] %>
-  username: <%= Rails.application.credentials[:db][:username] %>
-  password: <%= Rails.application.credentials[:db][:password] %>
+  database: <%= Rails.application.credentials.dig(:db, :database) %>
+  username: <%= Rails.application.credentials.dig(:db, :username) %>
+  password: <%= Rails.application.credentials.dig(:db, :password) %>
