:gear: specify target_branch

--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -4,6 +4,7 @@ update_configs:
   - package_manager: "ruby:bundler"
     directory: "/beagile_api"
     update_schedule: "daily"
+    target_branch: update_dependencies
     automerged_updates:
       - match:
           dependency_name: "solargraph"
@@ -14,6 +15,7 @@ update_configs:
   - package_manager: "javascript"
     directory: "/front/be-agile"
     update_schedule: "daily"
+    target_branch: update_dependencies
     ignored_updates:
       - match:
           dependency_name: "@angular/animations"
