--- a/beagile_api/.rubocop.yml
+++ b/beagile_api/.rubocop.yml
@@ -1,5 +1,6 @@
 require:
   - rubocop-performance
+  - rubocop-rails
 
 # https://github.com/rubocop-hq/rubocop/blob/master/config/default.yml
 AllCops:
