--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -42,3 +42,7 @@ update_configs:
       - match:
           dependency_name: "@types/node"
           version_requirement: ">=13.x"
+    automerged_updates:
+      - match:
+          dependency_name: "@types/node"
+          update_type: "semver:minor"
